# aiolos

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  bootstrap.sh  pyproject.toml
.github/workflows/: pages.yml
presets/: base.toml  frappe.toml  infra.toml  nextjs.toml  python.toml
site/: beep.js  index.html  styles.css
skill/setup/: SKILL.md
src/aiolos/: __init__.py  audit.py  cli.py  config.py  harden.py  installer.py  library.py  lint.py  mcp.py  prompt.py  tools.py  wizard.py
src/claude_setup/: __init__.py  audit.py  cli.py  config.py  detect.py  doctor.py  harden.py  installer.py  library.py  mcp.py  scaffolder.py  tools.py  wizard.py
tests/: conftest.py  test_detect_and_presets.py  test_mcp.py  test_scaffolder_lint_doctor.py  test_tools_audit_harden.py
