[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiolos"
version = "0.2.0"
description = "Install the right Claude Code skills and subagents into any project from your personal library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daniel" }]
keywords = ["claude", "claude-code", "skills", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
]
dependencies = []

[project.scripts]
aiolos = "aiolos.cli:main"

[project.urls]
Homepage = "https://github.com/unbrained-labs/aiolos"
Source = "https://github.com/unbrained-labs/aiolos"
Issues = "https://github.com/unbrained-labs/aiolos/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aiolos"]

[tool.hatch.build.targets.sdist]
include = [
    "src/aiolos",
    "presets",
    "skill",
    "bootstrap.sh",
    "README.md",
]
